[gd_scene load_steps=7 format=3 uid="uid://ifrheix1e8td"]

[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="1_mr5qk"]
[ext_resource type="Script" uid="uid://bsrchl7emuag1" path="res://menu.gd" id="1_yw06p"]

[sub_resource type="InputEventAction" id="InputEventAction_mae5d"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_4hy44"]
events = [SubResource("InputEventAction_mae5d")]

[sub_resource type="InputEventAction" id="InputEventAction_ouk20"]
action = &"quit"

[sub_resource type="Shortcut" id="Shortcut_mae5d"]
events = [SubResource("InputEventAction_ouk20")]

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_yw06p")

[node name="GameLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_mr5qk")
theme_override_font_sizes/font_size = 64
text = "Eye Survived"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -210.0
offset_right = 125.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mr5qk")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_4hy44")
text = "Game"

[node name="ControlButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -60.0
offset_right = 175.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mr5qk")
theme_override_font_sizes/font_size = 64
text = "Controls"

[node name="TogglesButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 90.0
offset_right = 175.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mr5qk")
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -120.0
offset_right = 125.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_mr5qk")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_mae5d")
text = "Quit"

[connection signal="pressed" from="GameButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="ControlButton" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="ControlButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="TogglesButton" to="." method="_on_toggles_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
